# mailbomb

./: README.md  pyproject.toml
mailbomb/core/: logging.py
mailbomb/models/: contact.py
mailbomb/services/: email.py
tests/unit/: test_email_service.py
